--- a/index.html
+++ b/index.html
@@ -27,16 +27,109 @@
     </header>
     <main>
         <section>
+            <img src="./images/slider-img3.jpg" alt="barber is working" width="1070" height="680">
             <p>A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
             <p>We are experts in trendy men’s haircuts.
                 We work quickly, carefully and with style.</p>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section>
+            <ul>
+                <li><img src="./images/img1.jpg" alt="barber soaps the neck" width="270" height="445"></li>
+                <li> <img src="./images/img2.jpg" alt="barber is shaving the back of head" width="270" height="445"></li>
+            </ul>
+            <p>About</p>
+            <h2>Best Barbershop in your city</h2>
+            <ul>
+                <li><p>If you want to add more confidence to your image, you should definitely visit us.</p></li>
+                <li> <p>We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!</p></li>
+            </ul>
+            <button type="button">ONLINE-BOOKING</button> 
+        </section>
+        <section>
+            <img src="./images/img.jpg" alt="a razor in a barber's hand" width="1600" height="692">
+            <p>Spend your time with the best masters</p>
+            <h2>Services and prices</h2>
+            <ul>
+                <li>
+                    <ul>
+                        <li>Men’s haircut-from 300 uah.</li>
+                        <li>Beard trim-from 300 uah.</li>
+                        <li>Mustache trim-from 200 uah.</li>
+                        <li>Straight razor shave-from 200 uah.</li>
+                    </ul>
+                </li>
+                <li>
+                    <ul>
+                        <li>Trainee’s haircut-from 50 uah.</li>
+                        <li>Haircut under the nozzle-from 200 uah.</li>
+                        <li>Children’s haircut (0-12 y.o.)-from 300 uah.</li>
+                        <li>Camouflage of gray hair-from 200 uah.</li>
+                    </ul>
+                </li>
+            </ul>
+            <button type="button">online-booking</button>
+        </section>
+        <section>
+            <ul>
+                <li>600+Satisfied customers per day</li>
+                <li>50+Awards for excellent service</li>
+                <li>20+Kyiv’s best barbers</li>
+                <li>100+Gifts for regular customers</li>
+            </ul>
+            <p>Old traditional school</p>
+            <h2>¿Why people come to us?</h2>
+            <p>Only good things are said about us. But it's better to see and feel 1 time than read 10 times. </p>
+        </section>
+        <section>
+            <p>For true enjoyers of the atmosphere</p>
+            <h2>Our barbers</h2>
+            <ul>
+                <li>
+                    <img src="./images/imag1.jpg" alt="working barber" width="370" height="347">
+                    <h3>John Smith</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/imag2.jpg" alt="working barber" width="370" height="347">
+                    <h3>Michele Doe</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                    </ul>
+                </li>
+                <li>
+                    <img src="./images/imag3.jpg" alt="working barber" width="370" height="347">
+                    <h3>Alan Black</h3>
+                    <p>Extreme Barber</p>
+                    <ul>
+                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Portfolio</h2>
+            <p>In Latin, "barba" means "beard"</p>
+            <ul>
+                <li> <img src="./images/img25.jpg" alt="hairdresser cuts" width="270" height="360"></li>
+                <li> <img src="./images/img26.jpg" alt="barber shaves" width="270" height="360"></li>
+                <li> <img src="./images/img27.jpg" alt="barber makes a mask" width="270" height="360"></li>
+                <li> <img src="./images/img28.jpg" alt="barber is shaving the back of head" width="270" height="360"></li>
+            </ul>
+        </section>
 
     </main>
     <footer></footer>
