--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&    family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <a href="./index.html"><img src="./images/logo.svg" alt="site logo"></a>
-        <ul>
-            <li><a href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
-        </ul>
-        <nav>  
-            <ul>
+    <header class="header">
+        <a class="logo" href="./index.html"><img src="./images/logo.svg" alt="site logo"></a>
+ 
+        <nav class="nav">  
+            <ul class="list">
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Services and prices</li>
                 <li><a href="#"></a>Barbers</li>
                 <li><a href="#"></a>Contacts</li>
             </ul>
         </nav>
-        <a href="tel:+380441111111">+38 044 111 11 11</a>
+        <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
         <button type="button">Online-booking</button>
     </header>
     <main>
-        <section>
+        <section class="hero">
+        <div class="left-side">
+          <ul class="list">
+            <li><a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+          </ul>  
+        </div>
             <img src="./images/slider-img3.jpg" alt="barber is working" width="1070" height="680">
             <p>A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
@@ -33,7 +40,7 @@
                 We work quickly, carefully and with style.</p>
         </section>
         <section>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/img1.jpg" alt="barber soaps the neck" width="270" height="445"></li>
                 <li> <img src="./images/img2.jpg" alt="barber is shaving the back of head" width="270" height="445"></li>
             </ul>
@@ -53,9 +60,9 @@
             <img src="./images/img.jpg" alt="a razor in a barber's hand" width="1600" height="692">
             <p>Spend your time with the best masters</p>
             <h2>Services and prices</h2>
-            <ul>
+            <ul class="list">
                 <li>
-                    <ul>
+                    <ul class="list">
                         <li>
                          <p>Men’s haircut</p>
                          <p>from 300 uah.</p>
@@ -75,7 +82,7 @@
                     </ul>
                 </li>
                 <li>
-                    <ul>
+                    <ul class="list">
                         <li>
                           <p>Trainee’s haircut</p>
                           <p>from 50 uah.</p>
@@ -98,7 +105,7 @@
             <button type="button">online-booking</button>
         </section>
         <section>
-            <ul>
+            <ul class="list">
                 <li>
                  <span>600</span>
                  <p>Satisfied customers per day</p>
@@ -123,7 +130,7 @@
         <section>
             <p>For true enjoyers of the atmosphere</p>
             <h2>Our barbers</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/imag1.jpg" alt="working barber" width="370" height="347">
                     <h3>John Smith</h3>
@@ -162,7 +169,7 @@
         <section>
             <h2 hidden>Portfolio</h2>
             <p>In Latin, "barba" means "beard"</p>
-            <ul>
+            <ul class="list">
                 <li> <img src="./images/img25.jpg" alt="hairdresser cuts" width="270" height="360"></li>
                 <li> <img src="./images/img26.jpg" alt="barber shaves" width="270" height="360"></li>
                 <li> <img src="./images/img27.jpg" alt="barber makes a mask" width="270" height="360"></li>
@@ -175,10 +182,10 @@
         <section>
             <h2>Contacts</h2>
             <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8">st. Vasilkivska, 7A <br>
+                <ul class="list">
+                    <li><a class="link" href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8">st. Vasilkivska, 7A <br>
                         Kyiv, 08132</a></li>
-                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
                     <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
@@ -189,9 +196,9 @@
     </main>
     <footer>
         <p>&copy; Copyright 2020</p>
-        <ul>
-            <li><a href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        <ul class="list">
+            <li><a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a class="link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
         
     </footer>
