--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>  
         </div>
             <img src="./images/slider-img3.jpg" alt="barber is working" width="1070" height="680">
-            <p class="suptitle">A hair salon for men in Kyiv</p>
+            <p class="suptitle dark-suptitle">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
             <p class="slogan-dark">We are experts in trendy men’s haircuts.
                 We work quickly, carefully and with style.</p>
@@ -62,11 +62,11 @@
                     We are a team that never stops at what has been achieved and are thirsty for changes. And when you fall into the hands of our master, you will never be the same again. We are a team that is always "on the same wave" with clients. Therefore, we are always ready to improve everyone who comes to us!
                 </p>
             
-            <button class="booking-btn light" type="button">ONLINE-BOOKING</button> 
+            <button class="btn-light" type="button">ONLINE-BOOKING</button> 
         </section>
         <section class="services">
             <img src="./images/img.jpg" alt="a razor in a barber's hand" width="1600" height="692">
-            <p class="suptitle">Spend your time with the best masters</p>
+            <p class="suptitle dark-suptitle">Spend your time with the best masters</p>
             <h2 class="services-title">Services and prices</h2>
             <ul class="services-list">
                 <li>
@@ -110,7 +110,7 @@
                     </ul>
                 </li>
             </ul>
-            <button class="dark-btn" type="button">online-booking</button>
+            <button class="btn-dark" type="button">online-booking</button>
         </section>
         <section class="why">
             <ul class="why-list">
@@ -198,7 +198,7 @@
                     <li><a class="mail-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
-            <h3 class="suptitle-dark">Working hours</h3>
+            <h3 class="suptitle contacts-suptitle">Working hours</h3>
             <p class="slogan-dark">Every day from 9:00 to 22:00</p>
         </section>
 
@@ -206,8 +206,8 @@
     <footer class="footer">
         <p class="copy">&copy;  Copyright 2020</p>
         <ul class="socials">
-            <li><a class="insta-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a class="youtube-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+            <li><a class="socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a class="socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
         
     </footer>
