--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
         </nav>
         <a class="header-phone" href="tel:+380441111111">+38 044 111 11 11</a>
         <button class="header-btn btn" type="button">Online-booking</button>
+
+        <div class="left-side">
+          <ul class="header-socials">
+            <li><hr></li>
+            <li><a class="header-social social-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a class="header-social social-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+          </ul>  
+        </div>
+        
     </header>
     <main>
         <section class="hero">
-        <div class="left-side">
-          <ul class="socials">
-            <li><hr></li>
-            <li><a class="socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a class="socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
-          </ul>  
-        </div>
             <img src="./images/slider-img3.jpg" alt="barber is working" width="1070" height="680">
             <p class="hero-suptitle suptitle">A hair salon for men in Kyiv</p>
             <h1 class="hero-title">BarberShop</h1>
@@ -138,10 +140,10 @@
                     <h3 class="barbers-name">John Smith</h3>
                     <p class="barbers-desc">Extreme Barber</p>
                     <ul class="barbers-social">
-                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
-                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
-                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
-                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
                     </ul>
                 </li>
                 <li>
@@ -149,10 +151,10 @@
                     <h3 class="barbers-name">Michele Doe</h3>
                     <p class="barbers-desc">Extreme Barber</p>
                     <ul class="barbers-social">
-                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
-                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
-                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
-                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
                     </ul>
                 </li>
                 <li>
@@ -160,10 +162,10 @@
                     <h3 class="barbers-name">Alan Black</h3>
                     <p class="barbers-desc">Extreme Barber</p>
                     <ul class="barbers-social">
-                        <li><a href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
-                        <li><a href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
-                        <li><a href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
-                        <li><a href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/instagram.svg" alt="instagram logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/twitter.svg" alt="twitter logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/facebook.svg" alt="facebook logo"></a></li>
+                        <li><a class="social-item" href=""> <img src="./images/linkedin.svg" alt="linkedin logo"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -186,10 +188,10 @@
             <h2 class="contacts-title title">Contacts</h2>
             <address class="contacts-items">
                 <ul class="contacts-list">
-                    <li><a class="address-link" href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8">st. Vasilkivska, 7A <br>
+                    <li><a class="address-link contact-link" href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8">st. Vasilkivska, 7A <br>
                         Kyiv, 08132</a></li>
-                    <li><a class="phone-link" href="tel:+380441111111">+38 044 111 11 11</a></li>
-                    <li><a class="mail-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                    <li><a class="phone-link contact-link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a class="mail-link contact-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
             </address>
             <h3 class="contacts-suptitle suptitle">Working hours</h3>
@@ -199,9 +201,9 @@
     </main>
     <footer class="footer">
         <p class="copy">&copy;  Copyright 2020</p>
-        <ul class="socials">
-            <li><a class="footer-link socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a class="footer-link socials-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        <ul class="footer-social">
+            <li><a class="footer-link social-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a class="footer-link social-link" href="#" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
         
     </footer>
