--- a/index.html
+++ b/index.html
@@ -126,7 +126,6 @@
       </section>
       <section class="prices section">
         <div class="container">
-          <!-- <img src="./images/img.jpg" alt="a razor in a barber's hand" width="1600" height="692"> -->
           <p class="prices-suptitle suptitle">
             Spend your time with the best masters
           </p>
@@ -217,30 +216,40 @@
                 width="370"
                 height="347"
               />
-              <h3 class="barbers-name">John Smith</h3>
-              <p class="barbers-desc">Extreme Barber</p>
-              <ul class="barbers-social">
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/instagram.svg" alt="instagram logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/twitter.svg" alt="twitter logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/facebook.svg" alt="facebook logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/linkedin.svg" alt="linkedin logo"
-                  /></a>
-                </li>
-              </ul>
+              <div class="barbers-info">
+                <h3 class="barbers-name">John Smith</h3>
+                <p class="barbers-desc">Extreme Barber</p>
+                <ul class="barbers-social">
+                  <li>
+                    <a class="social-item" href="">
+                    <svg class="social-icon">
+                      <use href="./images/symbol-sprite.svg#instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+            <svg class="social-icon">
+              <use href="./images/symbol-sprite.svg#twitter"></use>
+            </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#facebook"></use>
+                </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#linkedin"></use>
+                </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="barbers-item">
               <img
@@ -249,30 +258,40 @@
                 width="370"
                 height="347"
               />
-              <h3 class="barbers-name">Michele Doe</h3>
-              <p class="barbers-desc">Extreme Barber</p>
-              <ul class="barbers-social">
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/instagram.svg" alt="instagram logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/twitter.svg" alt="twitter logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/facebook.svg" alt="facebook logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/linkedin.svg" alt="linkedin logo"
-                  /></a>
-                </li>
-              </ul>
+              <div class="barbers-info">
+                <h3 class="barbers-name">Michele Doe</h3>
+                <p class="barbers-desc">Extreme Barber</p>
+                <ul class="barbers-social">
+                  <li>
+                    <a class="social-item" href="">
+                    <svg class="social-icon">
+                      <use href="./images/symbol-sprite.svg#instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+            <svg class="social-icon">
+              <use href="./images/symbol-sprite.svg#twitter"></use>
+            </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#facebook"></use>
+                </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#linkedin"></use>
+                </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="barbers-item">
               <img
@@ -281,30 +300,40 @@
                 width="370"
                 height="347"
               />
-              <h3 class="barbers-name">Alan Black</h3>
-              <p class="barbers-desc">Extreme Barber</p>
-              <ul class="barbers-social">
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/instagram.svg" alt="instagram logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/twitter.svg" alt="twitter logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/facebook.svg" alt="facebook logo"
-                  /></a>
-                </li>
-                <li>
-                  <a class="social-item" href="">
-                    <img src="./images/linkedin.svg" alt="linkedin logo"
-                  /></a>
-                </li>
-              </ul>
+              <div class="barbers-info">
+                <h3 class="barbers-name">Alan Black</h3>
+                <p class="barbers-desc">Extreme Barber</p>
+                <ul class="barbers-social">
+                  <li>
+                    <a class="social-item" href="">
+                    <svg class="social-icon">
+                      <use href="./images/symbol-sprite.svg#instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+            <svg class="social-icon">
+              <use href="./images/symbol-sprite.svg#twitter"></use>
+            </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#facebook"></use>
+                </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="social-item" href="">
+                <svg class="social-icon">
+                  <use href="./images/symbol-sprite.svg#linkedin"></use>
+                </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
