--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <header class="header">
       <div class="container header-container">
         <a class="logo" href="./index.html"
-          ><img src="./images/logo.svg" alt="site logo"
-        /></a>
+          ><svg class="logo-icon" width="69" height="55">
+            <use href="./images/symbol-sprite.svg#logo"></use>
+          </svg></a>
 
         <nav class="header-nav">
           <ul class="nav-list">
@@ -419,7 +420,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <p class="copy">&copy; Copyright 2020</p>
         <ul class="footer-social">
           <li>
