--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <a class="logo" href="./index.html"
-          ><svg class="logo-icon" width="69" height="55">
+        <a class="logo" href="./index.html">
+          <svg class="logo-icon" width="69" height="55">
             <use href="./images/symbol-sprite.svg#logo"></use>
-          </svg></a>
-
+          </svg>
+        </a>
         <nav class="header-nav">
           <ul class="nav-list">
             <li class="nav-item">
@@ -47,7 +47,9 @@
         <a class="header-phone header-link" href="tel:+380441111111"
           >+38 044 111 11 11</a
         >
-        <button class="header-btn btn" type="button">Online-booking</button>
+        <button class="header-btn btn" data-modal-open type="button">
+          Online-booking
+        </button>
       </div>
     </header>
     <main>
@@ -223,30 +225,30 @@
                 <ul class="barbers-social">
                   <li>
                     <a class="social-item" href="">
-                    <svg class="social-icon">
-                      <use href="./images/symbol-sprite.svg#instagram"></use>
-                    </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-            <svg class="social-icon">
-              <use href="./images/symbol-sprite.svg#twitter"></use>
-            </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#facebook"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#linkedin"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -265,30 +267,30 @@
                 <ul class="barbers-social">
                   <li>
                     <a class="social-item" href="">
-                    <svg class="social-icon">
-                      <use href="./images/symbol-sprite.svg#instagram"></use>
-                    </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-            <svg class="social-icon">
-              <use href="./images/symbol-sprite.svg#twitter"></use>
-            </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#facebook"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#linkedin"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -307,30 +309,30 @@
                 <ul class="barbers-social">
                   <li>
                     <a class="social-item" href="">
-                    <svg class="social-icon">
-                      <use href="./images/symbol-sprite.svg#instagram"></use>
-                    </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-            <svg class="social-icon">
-              <use href="./images/symbol-sprite.svg#twitter"></use>
-            </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#facebook"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
                   <li>
                     <a class="social-item" href="">
-                <svg class="social-icon">
-                  <use href="./images/symbol-sprite.svg#linkedin"></use>
-                </svg>
+                      <svg class="social-icon">
+                        <use href="./images/symbol-sprite.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -381,43 +383,43 @@
           </ul>
         </div>
       </section>
-      <section class="booking">
+      <div class="online-contact">
         <div class="container">
-          <h2 class="booking-title title">Online-booking</h2>
-          <button class="booking-btn btn" type="button">send</button>
+          <section class="booking">
+            <h2 class="booking-title title">Online-booking</h2>
+            <button class="booking-btn btn" type="button">send</button>
+          </section>
+          <section class="contacts">
+            <h2 class="contacts-title title">Contacts</h2>
+            <address class="contacts-address">
+              <ul class="contacts-list">
+                <li class="contacts-item">
+                  <a
+                    class="address-link contact-link"
+                    href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8"
+                    >st. Vasilkivska, 7A <br />
+                    Kyiv, 08132</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a class="phone-link contact-link" href="tel:+380441111111"
+                    >+38 044 111 11 11</a
+                  >
+                </li>
+                <li class="contacts-item">
+                  <a
+                    class="mail-link contact-link"
+                    href="mailto:barbershop@email.com"
+                    >barbershop@email.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <h3 class="contacts-suptitle suptitle">Working hours</h3>
+            <p class="schedule">Every day from 9:00 to 22:00</p>
+          </section>
         </div>
-      </section>
-      <section class="contacts">
-        <div class="container">
-          <h2 class="contacts-title title">Contacts</h2>
-          <address class="contacts-address">
-            <ul class="contacts-list">
-              <li class="contacts-item">
-                <a
-                  class="address-link contact-link"
-                  href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8"
-                  >st. Vasilkivska, 7A <br />
-                  Kyiv, 08132</a
-                >
-              </li>
-              <li class="contacts-item">
-                <a class="phone-link contact-link" href="tel:+380441111111"
-                  >+38 044 111 11 11</a
-                >
-              </li>
-              <li class="contacts-item">
-                <a
-                  class="mail-link contact-link"
-                  href="mailto:barbershop@email.com"
-                  >barbershop@email.com</a
-                >
-              </li>
-            </ul>
-          </address>
-          <h3 class="contacts-suptitle suptitle">Working hours</h3>
-          <p class="schedule">Every day from 9:00 to 22:00</p>
-        </div>
-      </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="container footer-container">
@@ -444,5 +446,94 @@
         </ul>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="modal-close-btn" type="button">
+          X
+        </button>
+        <p class="modal-title">ONLINE BOOKING</p>
+        <form class="modal-form">
+          <label class="modal-label">
+            <span class="label-text">Name</span>
+            <input
+              type="text"
+              name="user-name"
+              class="modal-input"
+              placeholder="John Johnson"
+              required
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/symbol-sprite.svg#user"></use>
+            </svg>
+          </label>
+          <label class="modal-label">
+            <span class="label-text">E-mail</span>
+            <input
+              type="mail"
+              name="user-email"
+              class="modal-input"
+              placeholder="name@mail.com"
+              required
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/symbol-sprite.svg#email"></use>
+            </svg>
+          </label>
+          <label class="modal-label">
+            <span class="label-text">Phone</span>
+            <input
+              type="tel"
+              name="user-tel"
+              class="modal-input"
+              placeholder="+038 (00) 000-00-00"
+              required
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="./images/symbol-sprite.svg#phone"></use>
+            </svg>
+          </label>
+          <label class="comment-label">
+            <span class="label-text">Comment</span>
+            <textarea
+              name=""
+              class="modal-comment"
+              placeholder="Your response"
+            ></textarea>
+          </label>
+          <ul class="checbox-list">
+            <p class="checkbox-title">Your choice</p>
+            <li>
+              <label class="modal-checkbox">
+                <input type="checkbox" class="checkbox-input visually-hidden" />
+                <svg class="checkbox-icon" width="18" height="18">
+                  <use href="./images/symbol-sprite.svg#click"></use>
+                </svg>
+                Haircut
+              </label>
+            </li>
+            <li>
+              <label class="modal-checkbox">
+                <input type="checkbox" class="checkbox-input visually-hidden" />
+                <svg class="checkbox-icon" width="18" height="18">
+                  <use href="./images/symbol-sprite.svg#click"></use>
+                </svg>
+                Shaving
+              </label>
+            </li>
+            <li>
+              <label class="modal-checkbox">
+                <input type="checkbox" class="checkbox-input visually-hidden" />
+                <svg class="checkbox-icon" width="18" height="18">
+                  <use href="./images/symbol-sprite.svg#click"></use>
+                </svg>
+                Barberform
+              </label>
+            </li>
+          </ul>
+          <button class="submit-btn btn" type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
