--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 </div>
               </div>
               <div class="swiper-pagination"></div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
+              <div class="swiper-btn custom-prev">Back</div>
+              <div class="swiper-btn custom-next">Forward</div>
             </div>
           </div>
         </div>
