--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 carefully and with style.
               </p>
             </div>
-            <div class="swiper">
+            <div class="swiper swiper-container">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <picture>
@@ -214,7 +214,11 @@
                   </picture>
                 </div>
               </div>
-              <div class="swiper-pagination"></div>
+              <div class="swiper-pagination swiper-block">
+                <div class="swiper-pagination-bullet"></div>
+                <div class="swiper-pagination-bullet"></div>
+                <div class="swiper-pagination-bullet"></div>
+              </div>
               <div class="swiper-btn custom-prev">Back</div>
               <div class="swiper-btn custom-next">Forward</div>
             </div>
