--- a/index.html
+++ b/index.html
@@ -783,6 +783,9 @@
                 <p class="schedule">Every day from 9:00 to 22:00</p>
               </div>
             </div>
+            <svg class="arrow-up-icon" width="40" height="40">
+              <use href="./images/symbol-sprite.svg#circle-up"></use>
+            </svg>
           </div>
         </section>
       </div>
@@ -903,8 +906,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/mobile-menu.js"></script>
-    <script src="./js/modal.js"></script>
-    <script type="module" src="./js/swiper.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
