fix-why-and-footer

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                     <a
                       class="address-link contact-link"
                       href="https://goo.gl/maps/sMC7R1vdvCnkaeTi8"
-                      >st. Vasilkovaya, 7A Kiev, 08132</a
+                      >st. Vasilkovaya, 7A Kyiv, 08132</a
                     >
                   </li>
                   <li class="contacts-item">
